build_errors.log
C:\Users\othma\Desktop\TeenTalk>flutter run -d edge
Resolving dependencies...
Downloading packages...
  _fe_analyzer_shared 67.0.0 (92.0.0 available)
  _flutterfire_internals 1.3.35 (1.3.64 available)
  analyzer 6.4.1 (9.0.0 available)
  async 2.11.0 (2.13.0 available)
  boolean_selector 2.1.1 (2.1.2 available)
  build 2.4.1 (4.0.2 available)
  build_config 1.1.1 (1.2.0 available)
  build_daemon 4.0.1 (4.1.0 available)
  build_resolvers 2.4.2 (3.0.4 available)
  build_runner 2.4.9 (2.10.1 available)
  build_runner_core 7.3.0 (9.3.2 available)
  characters 1.4.0 (1.4.1 available)
  checked_yaml 2.0.3 (2.0.4 available)
  cloud_firestore 4.17.5 (6.1.0 available)
  cloud_firestore_platform_interface 6.2.5 (7.0.4 available)
  cloud_firestore_web 3.12.5 (5.1.0 available)
  cloud_functions 4.7.6 (6.0.4 available)
  cloud_functions_platform_interface 5.5.28 (5.8.7 available)
  cloud_functions_web 4.9.6 (5.1.0 available)
  code_builder 4.10.0 (4.11.0 available)
  convert 3.1.1 (3.1.2 available)
  crypto 3.0.3 (3.0.7 available)
  dart_style 2.3.6 (3.1.2 available)
  firebase_analytics 10.10.7 (12.0.4 available)
  firebase_analytics_platform_interface 3.10.8 (5.0.4 available)
  firebase_analytics_web 0.5.7+7 (0.6.1 available)
  firebase_auth 4.20.0 (6.1.2 available)
  firebase_auth_platform_interface 7.3.0 (8.1.4 available)
  firebase_auth_web 5.12.0 (6.1.0 available)
  firebase_core 2.32.0 (4.2.1 available)
  firebase_core_platform_interface 5.4.2 (6.0.2 available)
  firebase_core_web 2.17.5 (3.3.0 available)
  firebase_messaging 14.9.4 (16.0.4 available)
  firebase_messaging_platform_interface 4.5.37 (4.7.4 available)
  firebase_messaging_web 3.8.7 (4.1.0 available)
  firebase_storage 11.7.7 (13.0.4 available)
  firebase_storage_platform_interface 5.1.22 (5.2.15 available)
  firebase_storage_web 3.9.7 (3.11.0 available)
  flutter_lints 3.0.2 (6.0.0 available)
  flutter_riverpod 2.6.1 (3.0.3 available)
  go_router 12.1.3 (17.0.0 available)
  golden_toolkit 0.13.0 (discontinued)
  google_identity_services_web 0.3.1+4 (0.3.3+1 available)
  google_sign_in 6.2.2 (7.2.0 available)
  google_sign_in_android 6.1.23 (7.2.2 available)
  google_sign_in_ios 5.7.8 (6.2.3 available)
  google_sign_in_platform_interface 2.4.5 (3.1.0 available)
  google_sign_in_web 0.12.4+3 (1.1.0 available)
  graphs 2.3.1 (2.3.2 available)
  http 1.2.2 (1.5.0 available)
  http_parser 4.0.2 (4.1.2 available)
  io 1.0.4 (1.0.5 available)
  js 0.7.1 (0.7.2 available)
  json_serializable 6.8.0 (6.11.1 available)
  lints 3.0.0 (6.0.0 available)
  logging 1.2.0 (1.3.0 available)
  material_color_utilities 0.11.1 (0.13.0 available)
  meta 1.16.0 (1.17.0 available)
  mime 1.0.6 (2.0.0 available)
  mockito 5.4.4 (5.5.1 available)
  package_config 2.1.0 (2.2.0 available)
  pool 1.5.1 (1.5.2 available)
  pub_semver 2.1.4 (2.2.0 available)
  pubspec_parse 1.4.0 (1.5.0 available)
  riverpod 2.6.1 (3.0.3 available)
  shelf 1.4.1 (1.4.2 available)
  shelf_web_socket 1.0.4 (3.0.0 available)
  source_gen 1.5.0 (4.0.2 available)
  source_helper 1.3.4 (1.3.8 available)
  source_span 1.10.0 (1.10.1 available)
  string_scanner 1.2.0 (1.4.1 available)
  term_glyph 1.2.1 (1.2.2 available)
  test_api 0.7.6 (0.7.7 available)
  timing 1.0.1 (1.0.2 available)
  typed_data 1.3.2 (1.4.0 available)
  vm_service 13.0.0 (15.0.2 available)
  web 0.5.1 (1.1.1 available)
  web_socket_channel 2.4.5 (3.0.3 available)
  yaml 3.1.2 (3.1.3 available)
Got dependencies!
1 package is discontinued.
79 packages have newer versions incompatible with dependency constraints.
Try `flutter pub outdated` for more information.
Launching lib\main.dart on Edge in debug mode...
Warning: In index.html:49: Local variable for "serviceWorkerVersion" is deprecated. Use
"{{flutter_service_worker_version}}" template token instead. See
https://docs.flutter.dev/platform-integration/web/initialization for more details.
Warning: In index.html:58: "FlutterLoader.loadEntrypoint" is deprecated. Use "FlutterLoader.load" instead. See
https://docs.flutter.dev/platform-integration/web/initialization for more details.
lib/src/features/messages/presentation/pages/messages_page.dart:130:37: Error: The getter
'directMessagesRepositoryProvider' isn't defined for the type 'MessagesPage'.
 - 'MessagesPage' is from 'package:teen_talk_app/src/features/messages/presentation/pages/messages_page.dart'
 ('lib/src/features/messages/presentation/pages/messages_page.dart').
Try correcting the name to the name of an existing getter, or defining a getter or field named
'directMessagesRepositoryProvider'.
                              .read(directMessagesRepositoryProvider)
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
lib/src/features/messages/presentation/pages/chat_screen.dart:48:37: Error: The getter
'directMessagesRepositoryProvider' isn't defined for the type '_ChatScreenState'.
 - '_ChatScreenState' is from 'package:teen_talk_app/src/features/messages/presentation/pages/chat_screen.dart'
 ('lib/src/features/messages/presentation/pages/chat_screen.dart').
Try correcting the name to the name of an existing getter, or defining a getter or field named
'directMessagesRepositoryProvider'.
        final repository = ref.read(directMessagesRepositoryProvider);
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
lib/src/features/feed/presentation/pages/feed_sections_page.dart:56:33: Error: This expression has type 'void' and can't
be used.
    _trendingSubscription = ref.listen<FeedState>(
                                ^
lib/src/features/feed/presentation/pages/feed_sections_page.dart:376:46: Error: The argument type 'String?' can't be
assigned to the parameter type 'String'.
                                userProfile!.school,
                                             ^
lib/src/features/feed/presentation/pages/feed_sections_page.dart:499:9: Error: No named parameter with the name
'currentUserId'.
        currentUserId: authState.user!.uid,
        ^^^^^^^^^^^^^
lib/src/features/comments/presentation/widgets/comments_list_widget.dart:16:9: Context: Found this candidate, but the
arguments don't match.
  const CommentsListWidget({
        ^^^^^^^^^^^^^^^^^^
lib/src/features/messages/presentation/widgets/conversation_list_item.dart:149:47: Error: Member not found:
'secondaryColor'.
                              color: AppTheme.secondaryColor,
                                              ^^^^^^^^^^^^^^
lib/src/features/messages/presentation/widgets/conversation_list_item.dart:155:49: Error: Member not found:
'lightOnPrimary'.
                                color: AppTheme.lightOnPrimary,
                                                ^^^^^^^^^^^^^^
lib/src/features/messages/presentation/widgets/message_bubble.dart:108:38: Error: Member not found: 'lightOnPrimary'.
                          ? AppTheme.lightOnPrimary
                                     ^^^^^^^^^^^^^^
lib/src/features/messages/presentation/widgets/message_bubble.dart:122:42: Error: Member not found: 'lightOnPrimary'.
                              ? AppTheme.lightOnPrimary.withOpacity(0.7)
                                         ^^^^^^^^^^^^^^
lib/src/features/messages/presentation/widgets/message_bubble.dart:134:42: Error: Member not found: 'accentColor'.
                              ? AppTheme.accentColor
                                         ^^^^^^^^^^^
lib/src/features/messages/presentation/widgets/message_bubble.dart:135:42: Error: Member not found: 'lightOnPrimary'.
                              : AppTheme.lightOnPrimary.withOpacity(0.7),
                                         ^^^^^^^^^^^^^^
lib/src/features/comments/presentation/providers/comments_provider.dart:95:23: Error: The argument type 'Comment?' can't
be assigned to the parameter type 'DocumentSnapshot<Object?>?'.
 - 'Comment' is from 'package:teen_talk_app/src/features/comments/data/models/comment.dart'
 ('lib/src/features/comments/data/models/comment.dart').
 - 'DocumentSnapshot' is from 'package:cloud_firestore/cloud_firestore.dart'
 ('../../AppData/Local/Pub/Cache/hosted/pub.dev/cloud_firestore-4.17.5/lib/cloud_firestore.dart').
 - 'Object' is from 'dart:core'.
        lastDocument: newLastDocument,
                      ^
lib/src/features/comments/presentation/providers/comments_provider.dart:132:23: Error: The argument type 'Comment?'
can't be assigned to the parameter type 'DocumentSnapshot<Object?>?'.
 - 'Comment' is from 'package:teen_talk_app/src/features/comments/data/models/comment.dart'
 ('lib/src/features/comments/data/models/comment.dart').
 - 'DocumentSnapshot' is from 'package:cloud_firestore/cloud_firestore.dart'
 ('../../AppData/Local/Pub/Cache/hosted/pub.dev/cloud_firestore-4.17.5/lib/cloud_firestore.dart').
 - 'Object' is from 'dart:core'.
        lastDocument: newLastDocument,
                      ^
Waiting for connection from debug service on Edge...               44,5s
